--- a/.github/workflows/maven-release-process.yml
+++ b/.github/workflows/maven-release-process.yml
@@ -116,6 +116,8 @@ jobs:
           echo "-Drelease=${release_version}" >> .mvn/maven.config
           echo "-Dchangelist=" >> .mvn/maven.config
           
+          git add .mvn/maven.config
+          
           git status
           git commit -a -m "🏁 Publishing release version [${release_version}]"
           git push origin ${release_branch}
