Fix consistency of tika plugin

--- a/independent-projects/core-plugins/pom.xml
+++ b/independent-projects/core-plugins/pom.xml
@@ -19,7 +19,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <tika.api.version>1.0.0-SNAPSHOT</tika.api.version>
+        <tika.api.version>${project.version}</tika.api.version>
     </properties>
 
     <modules>
