--- a/independent-projects/core-plugins/tika-plugin/pom.xml
+++ b/independent-projects/core-plugins/tika-plugin/pom.xml
@@ -17,7 +17,7 @@
         <osgi.compendium.version>7.0.0</osgi.compendium.version>
         <tika.version>2.8.0</tika.version>
         <skip.rewrite>true</skip.rewrite>
-        <tika.api.version>1.0.0-SNAPSHOT</tika.api.version>
+        <tika.api.version>${project.version}</tika.api.version>
     </properties>
     <dependencies>
 
