--- a/.github/workflows/maven-release-process.yml
+++ b/.github/workflows/maven-release-process.yml
@@ -113,7 +113,7 @@ jobs:
           
           # set version in .mvn/maven.config
           echo "-Dprod=true" > .mvn/maven.config
-          echo "-Drelease=${release_version}" >> .mvn/maven.config
+          echo "-Drevision=${release_version}" >> .mvn/maven.config
           echo "-Dchangelist=" >> .mvn/maven.config
           
           git add .mvn/maven.config
