implementation (Languages): #28456 Add Route and create Angular Library (#28492)
### Proposed Changes
* Add angular route for new migration of Languages.

--- a/core-web/tsconfig.base.json
+++ b/core-web/tsconfig.base.json
@@ -43,6 +43,9 @@
             "@dotcms/portlets/dot-experiments/portlet": [
                 "libs/portlets/dot-experiments/portlet/src/index.ts"
             ],
+            "@dotcms/portlets/dot-languages/portlet": [
+                "libs/portlets/dot-languages/portlet/src/index.ts"
+            ],
             "@dotcms/react": ["libs/sdk/react/src/index.ts"],
             "@dotcms/react/mocks": ["libs/sdk/react/src/lib/mocks/index.ts"],
             "@dotcms/template-builder": ["libs/template-builder/src/index.ts"],
