Fixing the postman filters issue-#27725
Signed-off-by: bryanboza <bryan.bozacastillo@dotcms.com>

--- a/.github/filters.yaml
+++ b/.github/filters.yaml
@@ -4,6 +4,7 @@ backend: &backend
   - 'build-parent/**'
   - 'core-web/pom.xml'
   - 'dotCMS/src/main/webapp/html/**/!(*.{css,js})'
+  - 'dotcms-postman/**'
   - 'dotCMS/!(src/main/webapp/html/)**'
   - 'dotcms-integration/**'
   - 'independent-projects/**'
