--- a/core-web/libs/portlets/dot-languages/data-access/tsconfig.spec.json
+++ b/core-web/libs/portlets/dot-languages/data-access/tsconfig.spec.json
@@ -4,7 +4,9 @@
         "outDir": "../../../../dist/out-tsc",
         "module": "commonjs",
         "target": "es2016",
-        "types": ["jest", "node"]
+        "types": ["jest", "node"],
+        "strict": false,
+        "noPropertyAccessFromIndexSignature": false
     },
     "files": ["src/test-setup.ts"],
     "include": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts", "src/**/*.d.ts"]
