--- a/core-web/libs/portlets/dot-locales/portlet/project.json
+++ b/core-web/libs/portlets/dot-locales/portlet/project.json
@@ -1,16 +1,16 @@
 {
-    "name": "portlets-dot-languages-data-access",
+    "name": "portlets-dot-locales-portlet",
     "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-    "sourceRoot": "libs/portlets/dot-languages/data-access/src",
-    "prefix": "lib",
-    "tags": ["type:data-access", "scope:dotcms-ui", "portlet:languages"],
+    "sourceRoot": "libs/portlets/dot-locales/portlet/src",
+    "prefix": "dot",
+    "tags": ["type:feature", "scope:dotcms-ui", "portlet:locales"],
     "projectType": "library",
     "targets": {
         "test": {
             "executor": "@nx/jest:jest",
             "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
             "options": {
-                "jestConfig": "libs/portlets/dot-languages/data-access/jest.config.ts"
+                "jestConfig": "libs/portlets/dot-locales/portlet/jest.config.ts"
             },
             "configurations": {
                 "ci": {
