--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5675,6 +5675,13 @@ block-editor.extension.ai-image.api-error.no-choice-returned=No choices returned
 block-editor.extension.ai.confirmation.header=Discard Changes?
 block-editor.extension.ai.confirmation.message=It looks like you've made significant or complex edits. Are you sure you want to discard these changes? Any unsaved progress will be lost.
 
+locales.add.locale=Add Locale
+locales.locale=Locale
+locales.language=Language
+locales.country=Country
+locales.variables=Variables
+locales.menu=Menu
+
 editpage.language-change-missing-lang-populate.confirm.header=Create New Language Version?
 editpage.language-change-missing-lang-populate.confirm.message=Page does not exist in the selected language. Create a new version in {0}?
 editpage.viewing.variant=Viewing <b>{0}</b> Variant
