#28716: testing workflow fir link PR to issue
noop

--- a/.github/workflows/post-pr-merge.yml
+++ b/.github/workflows/post-pr-merge.yml
@@ -1,15 +1,29 @@
 name: Post PR Merge
 on:
+  workflow_dispatch:
+    inputs:
+        pr_number:
+            description: 'Pull Request number'
+            type: number
+            required: true
+        pr_branch:
+            description: 'Pull Request branch'
+            type: string
+            required: true
+        validate_merge:
+            description: 'Validate merge'
+            type: boolean
+            required: false
+            default: true
   pull_request:
-    branches:
-      - 28716-test
     types:
-      - closed
+      [closed]
 
 jobs:
   post-pr-merge:
     name: Post Merge PR
     if: github.event.pull_request.merged == true
+    continue-on-error: true
     uses: ./.github/workflows/link-pr-to-issue.yml
     with:
       pr_number: ${{ github.event.pull_request.number }}
