--- a/.github/workflows/link-pr-to-issue.yml
+++ b/.github/workflows/link-pr-to-issue.yml
@@ -16,17 +16,19 @@ on:
         type: boolean
         required: false
         default: true
+env:
+  GH_TOKEN: ${{ github.token }}
 
 jobs:
   link-pr-to-issue:
     runs-on: ubuntu-20.04
-    continue-on-error: true
     steps:
       - run: echo 'GitHub context'
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
 
       - name: Link PR to Issue
+        continue-on-error: true
         shell: bash
         run: |
           pr_json=$(\
@@ -54,7 +56,9 @@ jobs:
           [[ -z "${fetched_issue_number}" ]] && echo "Issue [${issue_number}] could not be resolved" && exit 3
           
           pr_body=$(echo "${pr_json}" | jq -r '.body')
-          pr_body="${pr_body}"$'\n\n'"This PR fixes: #${issue_number}"
+          [[ "${pr_body}" == 'null' ]] && pr_body=
+          [[ -n "${pr_body}" ]] && pr_body="${pr_body}"$'\n\n'
+          pr_body="${pr_body}This PR fixes: #${issue_number}"
           echo "pr_body=${pr_body}"
           
           gh api \
@@ -62,4 +66,4 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/${{ github.repository }}/pulls/${{ inputs.pr_number }} \
-            -f "body=\"${pr_body}\""
+            -f "body=${pr_body}"
