--- a/examples/nextjs/.env.local.example
+++ b/examples/nextjs/.env.local.example
@@ -2,3 +2,5 @@ DOTCMS_AUTH_TOKEN=
 NEXT_PUBLIC_DOTCMS_HOST=http://localhost:8080
 NEXT_PUBLIC_EXPERIMENTS_API_KEY=analytic-api-key-from-dotcms-portlet
 NEXT_PUBLIC_EXPERIMENTS_DEBUG=true
+# This is for HTTPS server
+NODE_TLS_REJECT_UNAUTHORIZED=0
