--- a/dotCMS/src/main/resources/apps/dotema-config-v2.yml
+++ b/dotCMS/src/main/resources/apps/dotema-config-v2.yml
@@ -17,19 +17,11 @@ params:
                       {
                           "pattern": "/blogs/(.*)",
                           "url": "https://myspa.blogs.com:3000",
-                          "options": {
-                              "authenticationToken": "123",
-                              "depth": 3,
-                              "X-CONTENT-APP": "dotCMS"
-                          }
                       },
                       {
                           "pattern": ".*",
                           "url": "https://myspa.com:3000",
                           "options": {
-                              "authenticationToken": "456",
-                              "depth": 1,
-                              "X-CONTENT-APP": "dotCMS",
                               "devURLWhitelist": [
                                   "http://localhost:3000",
                                   "http://localhost:3001",
@@ -41,4 +33,4 @@ params:
               }
               ```
               <br/><br/>
-              You have a specific configuration for pages that start with '/blogs/' and a generic configuration for all other pages, i.e., '.*'. The 'options' object allows you to specify additional headers to be sent to the UVE Service. The 'authenticationToken' is an optional header in case you need a security layer for UVE requests. So, if the token sent by UVE does not equal the token in your app, the request will fail. The 'depth' attribute indicates dotCMS how many levels of related content must be returned by the API. The 'X-CONTENT-APP' is just an example of a custom header you can send to your app, so you can add your own.
+              You have a specific configuration for pages that start with '/blogs/' and a generic configuration for all other pages, i.e., '.*'. The 'devURLWhitelist' option allows you to specify a list of URLs that are allowed to access the UVE through the clientHost query parameter.
