--- a/examples/nextjs/.env.local.example
+++ b/examples/nextjs/.env.local.example
@@ -2,5 +2,6 @@ DOTCMS_AUTH_TOKEN=
 NEXT_PUBLIC_DOTCMS_HOST=http://localhost:8080
 NEXT_PUBLIC_EXPERIMENTS_API_KEY=analytic-api-key-from-dotcms-portlet
 NEXT_PUBLIC_EXPERIMENTS_DEBUG=true
-# This is for HTTPS server
+# If your local dotcms instance is running in https, this setting allows Node.js to connect to servers with invalid SSL certificates. 
+# For testing purposes only.
 NODE_TLS_REJECT_UNAUTHORIZED=0
